# hackathon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_windows.sh
cmake/: windows-mingw-toolchain.cmake
src/: main.cpp  test_ai.cpp
src/core/: globals.cpp  globals.hpp  os_context_menu.cpp  os_context_menu.hpp  os_desktop.cpp  os_desktop.hpp  os_notification.cpp  os_notification.hpp  os_taskbar.cpp  os_taskbar.hpp  os_window.cpp  os_window.hpp  os_window_manager.cpp  os_window_manager.hpp
src/game/: ai_service.cpp  ai_service.hpp  comms.cpp  comms.hpp  game_manager.cpp  game_manager.hpp  game_state.cpp  game_state.hpp  scenario.cpp  scenario.hpp  simulation.cpp  simulation.hpp  threat_center.cpp  threat_center.hpp
src/states/: demoDesktop.cpp  demoDesktop.hpp  titlescreen.cpp  titlescreen.hpp
